# netpoke

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  ICE_SEND_OPTIONS_FIX.md  ICMP_MESSAGE_FIX.md  IMPLEMENTATION_NOTES.md  IPV6_TRACKING_FIX.md  LICENSE-FSL.txt  Makefile  Makefile.in-docker  REFACTORING_PLAN.md  TESTPROBE_IMPLEMENTATION.md  TRACEROUTE_FIX_SUMMARY.md  TRACEROUTE_INVESTIGATION_SUMMARY.md  UDP_LENGTH_MATCHING.md  generate_certs.sh  server_config.toml  server_config.toml.example  test_icmp_cleanup.md  verify_ttl_fix.sh  websocket_test.html
.github/workflows/: build-binary.yml  deploy-to-host.yml  deploy-www1.yml  update-server.yml
auth/: Cargo.toml  README.md
auth/src/: config.rs  error.rs  lib.rs  middleware.rs  routes.rs  service.rs  session.rs  views.rs
auth/src/providers/: bluesky.rs  github.rs  google.rs  linkedin.rs  mod.rs  plain.rs
client/: Cargo.toml  build.sh
client/src/: lib.rs  measurements.rs  signaling.rs  webrtc.rs
client/src/recorder/: canvas_renderer.rs  media_recorder.rs  media_streams.rs  mod.rs  sensors.rs  state.rs  storage.rs  types.rs  ui.rs  utils.rs
client/static/lib/: recorder
common/src/: ice_candidate.rs  lib.rs  metrics.rs  protocol.rs
docs/: ALLOWED_USERS_GUIDE.md  AUTHENTICATION.md  AUTH_LIBRARY.md  DIAGNOSTICS.md  DTLS_BYPASS_FEATURE.md  GITHUB_ACTIONS.md  HTTPS_SETUP.md  MEASURING_FUNCTIONALITY.md  OAUTH_IMPLEMENTATION.md  PER_MESSAGE_UDP_OPTIONS.md  PLAIN_LOGIN_EXAMPLE.md  README.md  SCTP_FRAGMENTATION_BYPASS.md  SURVEY_UPLOAD.md  UDP_OPTIONS_SUMMARY.md  UDP_PACKET_OPTIONS.md  UDP_SOCKET_CONFIGURATION.md  VERIFICATION_GUIDE.md
docs/history/: BULK_CHANNEL_VERIFICATION.md  DTLS_FORWARDING_FIX.md  FIX_SUMMARY.md  ICE_SEND_OPTIONS_FIX.md  ICMP_CLEANUP_FIX.md  IMPLEMENTATION_NOTES.md  IPV6_TRACKING_FIX.md  README.md  TESTPROBE_IMPLEMENTATION.md  TRACEROUTE_FIX_SUMMARY.md  TRACEROUTE_PACKET_MATCHING_FIX.md  TRACEROUTE_TTL_FIX.md
docs/issues/: CAMERA_INTEGRATION_SUMMARY.md  README.md  session-summary-2026-02-04-camera-integration.md  session-summary-2026-02-04.md
docs/issues/open/: 001-database-name-not-updated.md  002-render-loop-not-implemented.md  003-missing-sensor-callback-exports.md  004-missing-audio-track-integration.md  005-test-metadata-not-populated.md  006-wrong-marquee-branding.md  007-sensor-manager-not-initialized.md  008-missing-sensor-tracking-javascript.md  009-missing-screen-stop-listener.md  010-camera-facing-not-detected.md  011-recordings-list-not-refreshed.md  012-missing-download-functions.md  013-ui-state-management-incomplete.md  014-recorder-init-timing-race.md  015-sensor-overlay-toggle-not-wired.md  016-chart-dimensions-incorrect.md  (+33 more)
docs/plans/: 2025-12-05-network-measurement-implementation.md  2025-12-05-network-measurement-system-design.md  2025-12-24-dashboard-cleanup-button-design.md  2026-02-04-camera-recording-integration-design.md  2026-02-04-camera-recording-integration.md  2026-02-05-survey-upload-feature-design.md  2026-02-05-survey-upload-implementation.md  competitive-positioning.md  design-style-guide.md  go-to-market.md  organization-model.md  product-overview.md  roadmap.md  survey-feature-spec.md  technical-architecture.md
infra/: Makefile  README.md  ansible.cfg  create-env  dnsfixer.toml
infra/inventory/: linode.yml
infra/playbooks/: delete-linode.yml  deploy-netpoke-on-sandbox.yml  deploy-netpoke.yml  ensure-deleted.yml  ensure-linode.yml  ensure-local.yml  make-linode-hosts.yml  setup-linode-hosts.yml  show-hosts.yml
infra/scripts/: convert-inventory-list-to-zone  create-env  generate-zone
infra/zones/: netpoke.com
iperf3-server/: Cargo.toml
iperf3-server/examples/: simple_server.rs
iperf3-server/src/: config.rs  error.rs  lib.rs  protocol.rs  server.rs  session.rs
iperf3-server/tests/: integration_tests.rs
misc/: alpine-service  netpoke.service
patches/: README.md
patches/dtls/: 01-conn-mod-rs.patch
patches/webrtc-ice/: 01-cargo-toml.patch  02-agent-transport.patch  03-candidate-mod.patch  04-candidate-base.patch  README.md
patches/webrtc-util/: 01-cargo-toml.patch  02-lib-rs.patch  03-conn-mod-rs.patch  04-conn-udp-rs.patch
prompts/: find-issues.md  fix-issues.md
scripts/: apply-patches.sh  refresh-vendored.sh  test_traceroute_matching.py
server/: Cargo.toml  build.rs  server.crt  server.key
server/examples/: https_example.rs  ttl_icmp_test.rs  udp_socket_options.rs
server/migrations/: 001_survey_upload_schema.sql
server/src/: analyst_api.rs  auth_cache.rs  auth_handlers.rs  capture_api.rs  cleanup.rs  client_config_api.rs  config.rs  dashboard.rs  data_channels.rs  database.rs  dtls_keylog.rs  dtls_keylog_api.rs  embedded.rs  https_server.rs  icmp_listener.rs  main.rs  measurements.rs  metrics_recorder.rs  packet_capture.rs  packet_tracker.rs  packet_tracking_api.rs  session_manager.rs  signaling.rs  state.rs  survey_middleware.rs  tracing_api.rs  tracing_buffer.rs  tracking_channel.rs  upload_api.rs  upload_utils.rs  webrtc_manager.rs
server/static/: camera-tracker.html  client-metadata.json  dashboard.html  dashboard.js  index.html  nettest.html  test-websocket.html
server/static/admin/: surveys.html
server/static/lib/recorder/: indexed_db.js  media_recorder.js
server/static/pkg/: wifi_verify_client.d.ts  wifi_verify_client.js  wifi_verify_client_bg.wasm.d.ts
server/static/public/: client-metadata.json  index.html
temp-space/blinkout/: .env.example  Cargo.toml  README.md  bsky-oauth.md  client-metadata.json.example
temp-space/blinkout/src/: main.rs
tmp/camera-standalone-for-cross-check/: .swo  CACHE_BUSTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README-WASM.md  STATE.md  camera-tracker.html  index.html
tmp/camera-standalone-for-cross-check/docs/plans/: 2026-01-27-rust-wasm-conversion-design.md  2026-01-27-rust-wasm-implementation.md  2026-01-30-sensor-tracking-design.md  2026-01-30-sensor-tracking-implementation.md
tmp/camera-standalone-for-cross-check/js/: indexed_db.js
tmp/camera-standalone-for-cross-check/src/: app.rs  lib.rs  recorder.rs  storage.rs  ui.rs  utils.rs
(+82 files in other folders)
