[workspace]
members = ["server", "client", "common"]
resolver = "2"

[profile.release]
debug = true # debug symbols cost nothing
# super slow # lto = true # do whole program optimization
opt-level = "s" # try to generate small code
overflow-checks = true # !!! Keep the overflows enabled

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
