[workspace]
members = ["server", "client", "common", "auth"]
resolver = "2"

# Patch webrtc crates to use our locally modified versions
# This enables per-message UDP socket options (TTL, DF bit, TOS) passed through the stack
[patch.crates-io]
webrtc = { path = "vendored/webrtc" }
webrtc-util = { path = "vendored/webrtc-util" }
webrtc-data = { path = "vendored/webrtc-data" }
webrtc-sctp = { path = "vendored/webrtc-sctp" }

[profile.release]
debug = true # debug symbols cost nothing
# super slow # lto = true # do whole program optimization
opt-level = "s" # try to generate small code
overflow-checks = true # !!! Keep the overflows enabled

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
