[package]
name = "wifi-verify-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"
tracing = "0.1"
trust-dns-resolver = "0.23"
thiserror = "1.0"
url = "2.4"
p256 = "0.13"
rand = "0.8"
