[package]
name = "netpoke-client"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
once_cell = "1.19"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "*"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "MessageEvent",
    "Blob",
    "Navigator",

    # Media APIs
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "MediaRecorder",
    "MediaRecorderOptions",
    "BlobEvent",
    "DisplayMediaStreamConstraints",

    # Canvas/Video
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "HtmlInputElement",
    "VideoTrack",
    "AudioTrack",
    "TextMetrics",

    # IndexedDB
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbCursorWithValue",
    "IdbTransactionMode",
    "IdbRequestReadyState",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
