[package]
name = "iperf3-server"
version = "0.1.0"
edition = "2021"
description = "A modular iperf3 server implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayourtch/netpoke"
keywords = ["iperf3", "network", "bandwidth", "testing"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
