[package]
name = "wifi-verify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "*", features = ["ws"] }
axum-server = { version = "*", features = ["tls-rustls"], default-features = false }
rustls = { version = "*", features = ["ring"], default-features = false }
rustls-webpki = { version = "*", features = ["ring"], default-features = false }


# axum-server = { version = "*", features = ["tls-rustls-no-provider"] }
tower = "*"
tower-http = { version = "*", features = ["fs", "trace"] }
webrtc = "*"
tokio-tungstenite = "*"
futures = "*"
tracing = "*"
tracing-subscriber = "*"
uuid = { version = "*", features = ["v4", "serde"] }
