[package]
name = "wifi-verify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
wifi-verify-auth = { path = "../auth" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "*", features = ["tls-rustls"], default-features = false }
rustls = { version = "*", features = ["ring"], default-features = false }
rustls-webpki = { version = "*", features = ["ring"], default-features = false }


# axum-server = { version = "*", features = ["tls-rustls-no-provider"] }
tower = "*"
tower-http = { version = "*", features = ["fs", "trace"] }
webrtc = "*"
webrtc-util = { path = "../vendored/webrtc-util" }
tokio-tungstenite = "*"
futures = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
uuid = { version = "*", features = ["v4", "serde"] }
config = { version = "*", features = ["toml"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
base64 = "0.22"
pcap = { version = "2.4.0", features = ["capture-stream"] }
parking_lot = "0.12"
chrono = "0.4"
