[package]
name = "camera-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "DisplayMediaStreamConstraints",
    "Navigator",
    "Blob",
    "BlobPropertyBag",
    "Event",
    "EventTarget",
    "CssStyleDeclaration",
    "TextMetrics",
    "VideoTrackList",
    "AudioTrackList",
    "Url",
    "HtmlAnchorElement",
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
